--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "predeploy": "npm run deploy",
+    "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
+    "poststart": "npm run deploy",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
