--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -28,4 +28,5 @@ jobs:
         cache: 'npm'
     - run: npm install
     - run: npm run build --if-present
+    - run: gh-pages -d build
     - run: npm test
