--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -27,6 +27,9 @@ jobs:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
     - run: npm install
+    - run:
+        git config --global user.email "giscard.amoussou@enigma-school.com"
+        git config --global user.name "GiscardAmoussou"
     #- run: npm run build --if-present
     - run: npm run deploy
     - run: npm test
