--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -28,7 +28,7 @@ jobs:
         cache: 'npm'
     - run: npm install
     - run: git config --global user.email "giscard.amoussou@enigma-school.com"
-    - run: git config --global user.name "GiscardAmoussou"
+    #- run: git config --global user.name "GiscardAmoussou"
     #- run: npm run build --if-present
     - run: npm run deploy
     - run: npm test
