--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -2,12 +2,17 @@
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
 
 name: Node.js CI
+  
 
 on:
   push:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
+    
+env: 
+  SECRET_KEY: ${{ secrets.SECRET_KEY }}
+  
 
 jobs:
   build:
@@ -27,9 +32,10 @@ jobs:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
     - run: npm install
+    - run: echo "the value of my key is ${{ env.SECRET_KEY }}"
     #- run: git config --global user.email "giscard.amoussou@enigma-school.com"
     #- run: git config --global user.name "GiscardAmoussou"
-    - run: npm run build --if-present
+    #- run: npm run build --if-present
     - run: npm run deploy
     - run: npm test
     
