--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,22 +1,18 @@
 # This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
-
 name: Node.js CI
-  
 
 on:
   push:
-    branches: [ "main" ]
+    branches: ["main"]
   pull_request:
-    branches: [ "main" ]
-    
+    branches: ["main"]
+
 env: 
   SECRET_KEY: ${{ secrets.SECRET_KEY }}
-  
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     strategy:
@@ -32,10 +28,8 @@ jobs:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
     - run: npm install
-    - run: echo "the value of my key is ${{ env.SECRET_KEY }}"
-    #- run: git config --global user.email "giscard.amoussou@enigma-school.com"
-    #- run: git config --global user.name "GiscardAmoussou"
-    #- run: npm run build --if-present
-    - run: npm run deploy
+    - run: |
+        echo $SECRET_KEY
+        npm run deploy
     - run: npm test
-    
+
