--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -30,6 +30,6 @@ jobs:
     - run: |
           git config --global user.name "${{ secrets.GiscardAmoussou }}"
           git config --global user.email "${{ secrets.giscard.amoussou@gmail.com }}"
-          git remote set-url origin https://x-access-token:${{ secrets.SECRET_KEY }}@github.com/${{github.TestAPP}}
+          git remote set-url origin https://x-access-token:${{ secrets.SECRET_KEY }}@github.com/${{github.repository}}
           npm run deploy   
     - run: npm test
