--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -27,7 +27,7 @@ jobs:
     - run: npm install
     - run: npm run build 
     - name: Deploy
-    - run: |
+      run: |
           git config --global user.name "${{ secrets.GiscardAmoussou }}"
           git config --global user.email "${{ secrets.giscard.amoussou@gmail.com }}"
           git remote set-url origin https://x-access-token:${{ secrets.SECRET_KEY }}@github.com/${{github.repository}}
