--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -30,6 +30,6 @@ jobs:
       run: |
           git config --global user.name "${{ secrets.GIT_USERNAME }}"
           git config --global user.email "${{ secrets.GIT_EMAIL }}"
-          git remote set-url origin https://"${{ secrets.SECRET_KEY }}"@github.com/"${{repository}}"
+          git remote set-url origin https://${ secrets.SECRET_KEY }@github.com/${repository}
           npm run deploy
     - run: npm test
